2002-03-23  Heikki Sairanen  <hex@localhost.localdomain>

	* Main/Include/charde.h: Changed ivan class to communist and assigned it the name "Ivan". Also changed Elpuri, Oree and Petrus to get their _name_ from AssignedName
	* Main/Source/charba.cpp: character::Save Changed to save AssignedName
	
	* Main/Include/charba.h (class character): Added functions   Name(), Article() Adjective(), ShowClassName(), CanBeAssignedAName(). For the AssignedNames

	* Main/Source/game.cpp: Added the function key to character's AssignName

	* Main/Source/charba.cpp (AssignName): Function added
	
	* Main/Source/game.cpp (PositionQuestion): Function added.

	
2002-03-22  Heikki Sairanen  <hex@localhost.localdomain>

	* Main/Source/charba.cpp (Look): Deleted odd GetIsPlayer() test

2002-03-22  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* FELL/Include/felist.h (class felist): DrawDescription moved to .cpp to correct an odd Linux bug.
	* FELL/Source/felist.cpp:

	
March 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Humanoid.pcx: Some humanoids dismembered by Kahvi

March 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* GetHitValue() of material and GetArmorValue() of material and item replaced by StrengthValue()
	  * Modified files:
	    * stack.cpp
	    * itemba.cpp
	      * ushort item::StrengthValue() const added
	    * itemde.cpp
	      * ushort bodypart::StrengthValue() const added
	    * charba.cpp
	    * charde.cpp
	    * materba.h
	      * ushort material::GetHitValue() const removed
	      * ushort material::GetArmorValue() const removed
	      * ushort material::StrengthValue() const added
	    * materde.h
	      * Numerous ushort xxx::GetHitValue() consts removed
	      * Numerous ushort xxx::GetArmorValue() consts removed
	      * Numerous ushort xxx::StrengthValue() consts added
	    * itemba.h
	      * uchar item::SurfaceMaterial() const added
	    * itemde.h
	      * Some ushort xxx::GetArmorValue() consts removed
	* Master data member added to bodypart